Adicionando o Botão da Linguagem

--- a/index.html
+++ b/index.html
@@ -39,23 +39,32 @@
   </div>
   <!-- CONTAINER 2 -->
   <div class="container-2">
-    <img class="foto-perfil" src="img/foto-perfil-modelo.avif" alt="">
-    <div class="text-area">
-      <h2>Quem sou</h2>
-      <p>Olá, eu sou Arian, programador especializado em soluções digitais!</p>
-      <p>Desenvolvo sites e aplicativos sob medida para seus negócios, focando em performance, design responsivo e funcionalidade intuitiva.</p>
-      <p>Seja para uma landing page simples ou uma plataforma web robusta, entrego código de alta qualidade e soluções escaláveis.</p>
+    <div class="row">
+      <img class="foto-perfil" src="img/foto-perfil-modelo.avif" alt="">
+      <div class="text-area">
+        <h2>Quem sou</h2>
+        <p>Olá, eu sou Arian, programador especializado em soluções digitais!</p>
+        <p>Desenvolvo sites e aplicativos sob medida para seus negócios, focando em performance, design responsivo e funcionalidade intuitiva.</p>
+        <p>Seja para uma landing page simples ou uma plataforma web robusta, entrego código de alta qualidade e soluções escaláveis.</p>
+      </div>
     </div>  
-    <img src="img/seta-para-baixo-azul.png" alt="" class="arrow-down">
+    <img src="img/seta-para-baixo-azul.png" alt="" class="arrow-down" style="display: block;">
   </div>
   <!-- CONTAINER 3 -->
-  <div class="container-3 row">
-    <div class="grid col 3">
-      <img src="img/foto-perfil-modelo.avif" alt="">
-    </div>
-    <div class="grid col-3"></div>
-    <div class="grid col-3"></div>
-    <div class="grid col-3"></div>
-  </div>
+  <div class="container-3">
+    <ul>
+      <li>
+        <a class="logo-lang" style="background-image: url(img/html.png);" href="#"></a>
+      </li>
+      <li>
+        <a class="logo-lang" style="background-image: url(img/css-img.png);" href="#"></a>
+      </li>
+      <li>
+        <a class="logo-lang" style="background-image: url(img/js-img.png); background-size: cover;" href="#"></a>
+      </li>
+      <li>
+        <a class="logo-lang" style=  "background-image: url(/img/php.png); background-size: cover;" href="#"></a>
+      </li>
+    </ul>
 </body>
 </html>
