Card dos projetos.(em processo)

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <title>Portfólio</title>
 </head>
 <body>
+  <!-- MENU DE NAVEGAÇÃO -->
+  <nav class="topnav">
+    <a href="#">Sobre Mim</a>
+    <a href="#">Habilidade</a>
+    <a href="#">Projetos</a>
+    <a href="#" style="float: right;">Contato</a>
+  </nav>
   <!-- CONTAINER 1 -->
-  <div class="container-1">
-    <nav class="topnav">
-      <a href="#">Sobre Mim</a>
-      <a href="#">Habilidade</a>
-      <a href="#">Projetos</a>
-      <a href="#" style="float: right;">Home</a>
-    </nav>
+  <section class="container-1">
     <h1>Está precisando de um site!</h1>
     <p>Entre em contato conosco e faça seu orçamento.</p>
     <!-- FORMULARIO PRINCIPAL -->
@@ -36,35 +37,83 @@
       <input type="submit" value="Enviar">
     </form>
     <img src="img/seta-dupla-baixo.png" alt="" class="arrow-down">
-  </div>
+  </section>
   <!-- CONTAINER 2 -->
-  <div class="container-2">
+  <section class="container-2">
     <div class="row">
-      <img class="foto-perfil" src="img/foto-perfil-modelo.avif" alt="">
+      <img class="foto-perfil" src="img/foto-perfil-modelo.avif" alt="foto de perfil">
       <div class="text-area">
         <h2>Quem sou</h2>
-        <p>Olá, eu sou Arian, programador especializado em soluções digitais!</p>
-        <p>Desenvolvo sites e aplicativos sob medida para seus negócios, focando em performance, design responsivo e funcionalidade intuitiva.</p>
+        <p>Olá, eu sou <strong>Arian</strong>, programador especializado em soluções digitais!</p>
+        <p>Desenvolvo sites e aplicativos sob medida para seus negócios, focando em performance, design <strong>responsivo</strong> e funcionalidade intuitiva.</p>
         <p>Seja para uma landing page simples ou uma plataforma web robusta, entrego código de alta qualidade e soluções escaláveis.</p>
       </div>
     </div>  
     <img src="img/seta-para-baixo-azul.png" alt="" class="arrow-down" style="display: block;">
-  </div>
+  </section>
   <!-- CONTAINER 3 -->
-  <div class="container-3">
+  <section class="container-3">
     <ul>
       <li>
-        <a class="logo-lang" style="background-image: url(img/html.png);" href="#"></a>
+        <a class="logo-lang" style="background-image: url(img/html.png);"></a>
       </li>
       <li>
-        <a class="logo-lang" style="background-image: url(img/css-img.png);" href="#"></a>
+        <a class="logo-lang" style="background-image: url(img/css-img.png);"></a>
       </li>
       <li>
-        <a class="logo-lang" style="background-image: url(img/js-img.png); background-size: cover;" href="#"></a>
+        <a class="logo-lang" style="background-image: url(img/js-img.png); background-size: cover;"></a>
       </li>
       <li>
-        <a class="logo-lang" style=  "background-image: url(/img/php.png); background-size: cover;" href="#"></a>
+        <a class="logo-lang" style="background-image: url(/img/php.png); background-size: cover;"></a>
       </li>
     </ul>
+    <div class="text-area">
+      <h2>Meus conhecimentos</h2>
+      <p>
+        Sou um desenvolvedor web com forte habilidade em <strong>HTML, CSS e JavaScript</strong>, o que me permite criar interfaces dinâmicas e visualmente atraentes.
+      </p>
+      <p>
+        <strong>JavaScript</strong> é minha principal ferramenta para adicionar interatividade. Tenho experiência em manipulação do <strong>DOM</strong>, criação de animações e desenvolvimento de funcionalidades complexas, como validação de formulários e interação com <strong>APIs</strong>, tornando as aplicações mais dinâmicas e eficientes.
+      </p>
+      <p>
+        Sou habilidoso em <strong>PHP</strong> para desenvolver soluções no back-end, como sistemas de login, gerenciamento de banco de dados e construção de páginas dinâmicas. Isso me permite criar sites completos e robustos, integrando as funcionalidades do front-end com uma lógica de servidor sólida e eficiente.
+      </p>
+      <img src="img/seta-dupla-baixo.png" alt="" class="arrow-down">
+    </div>
+  </section>
+  <section class="container-4">
+    <h2>Projetos</h2>
+    <ul>
+      <li>
+        <img src="img/foto-perfil-modelo.avif" alt="">
+        <div class="text-area">
+          <h3>projeto nome 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.</p>
+        </div>
+        <button type="button">Visualizar</button>
+      </li>
+      <li>
+        <img src="img/foto-perfil-modelo.avif" alt="">
+        <div class="text-area">
+          <h3>projeto nome 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.</p>
+        </div>
+        <button type="button">Visualizar</button>
+      </li>
+      <li>
+        <img src="img/foto-perfil-modelo.avif" alt="">
+        <div class="text-area">
+          <h3>projeto nome 1</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.</p>
+        </div>
+        <button type="button">Visualizar</button>
+      </li>
+    </ul>
+    <iframe src="" frameborder="0"></iframe>
+  </section>
+  <!-- FOOTER -->
+  <footer class="footer">
+
+  </footer>
 </body>
 </html>
