--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
+  <link rel="stylesheet" href="css/container-1.css">
+  <link rel="stylesheet" href="css/container-2.css">
+  <link rel="stylesheet" href="css/container-3.css">
+  <link rel="stylesheet" href="css/container-4.css">
   <title>Portfólio</title>
 </head>
 <body>
@@ -18,7 +22,7 @@
   <!-- CONTAINER 1 -->
   <section class="container-1">
     <h1>Está precisando de um site!</h1>
-    <p>Entre em contato conosco e faça seu orçamento.</p>
+    <p>Entre em contato e faça seu orçamento.</p>
     <!-- FORMULARIO PRINCIPAL -->
     <form class="form-1" action="/action_page.php">
 
