--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <title>Portfólio</title>
 </head>
 <body>
+  <div class="whatsapp">
+    <h3>Contato</h3>
+    <a href="whats"><img src="img/whatsapp.png" alt="whatsapp"></a>
+  </div>
   <!-- MENU DE NAVEGAÇÃO -->
   <nav class="topnav">
     <a href="#">Sobre Mim</a>
@@ -40,6 +44,7 @@
 
       <input type="submit" value="Enviar">
     </form>
+    <p>Saiba Mais!</p>
     <img src="img/seta-dupla-baixo.png" alt="" class="arrow-down">
   </section>
   <!-- CONTAINER 2 -->
@@ -92,7 +97,9 @@
         <img src="img/foto-perfil-modelo.avif" alt="">
         <div class="text-area">
           <h3>projeto nome 1</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore 
+          </p>
         </div>
         <button type="button">Visualizar</button>
       </li>
@@ -113,7 +120,7 @@
         <button type="button">Visualizar</button>
       </li>
     </ul>
-    <iframe src="" frameborder="0"></iframe>
+    <img src="img/seta-para-baixo-azul.png" alt="" class="arrow-down" style="display: block;">
   </section>
   <!-- FOOTER -->
   <footer class="footer">
