--- a/index.html
+++ b/index.html
@@ -3,19 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
   <link rel="stylesheet" href="css/container-1.css">
   <link rel="stylesheet" href="css/container-2.css">
   <link rel="stylesheet" href="css/container-3.css">
   <link rel="stylesheet" href="css/container-4.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/topnav.css">
+  <link rel="stylesheet" href="css/menu-overlay.css">
+  <link rel="stylesheet" href="css/whatsapp.css">
+
+  <!-- RESPONSIVE -->
+
+  <link rel="stylesheet" href="css/style-responsive.css">
+
   <title>Portfólio</title>
 </head>
 <body>
-  <div class="whatsapp">
-    <h3>Contato</h3>
-    <a href="whats"><img src="img/whatsapp.png" alt="whatsapp"></a>
-  </div>
+  <a href="whats">
+    <div class="whatsapp">
+      <h3>Entre em contato</h3>
+      <img src="img/whatsapp.png" alt="whatsapp">
+    </div>
+  </a>
   <!-- MENU DE NAVEGAÇÃO -->
   <nav class="topnav">
     <a href="#">Sobre Mim</a>
@@ -23,6 +35,8 @@
     <a href="#">Projetos</a>
     <a href="#" style="float: right;">Contato</a>
   </nav>
+  <!-- MENU RESPONSIVO -->
+
   <!-- CONTAINER 1 -->
   <section class="container-1">
     <h1>Está precisando de um site!</h1>
@@ -31,15 +45,15 @@
     <form class="form-1" action="/action_page.php">
 
       <label for="fname">Nome</label>
-      <input type="text" id="email" name="lastname" placeholder="Seu nome...">
+      <input type="text" id="fname" name="firstname" placeholder="Seu nome...">
 
       <label for="lname">Sobrenome</label>
-      <input type="text" id="email" name="lastname" placeholder="Seu melhor email...">
+      <input type="text" id="lname" name="lastname" placeholder="Seu melhor email...">
 
       <label for="email">Email</label>
       <input type="email" id="email" name="email" placeholder="Seu melhor email...">
 
-      <label for="lname">Telefone</label>
+      <label for="telnumber">Telefone</label>
       <input type="tel" id="telnumber" name="telnumber" placeholder="(+55)">
 
       <input type="submit" value="Enviar">
@@ -124,7 +138,12 @@
   </section>
   <!-- FOOTER -->
   <footer class="footer">
-
+    <h2></h2>
+    <p><a href="#">Arian &copy Todos os direitos reservados.</a></p>
   </footer>
+
+
+  <!-- MENU OVERLAY -->
+
 </body>
 </html>
