Removendo o Formulário e adicionando botão Whatsapp extra.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
   <section class="container-1">
     <h1>Está precisando de um site!</h1>
     <p>Entre em contato e faça seu orçamento.</p>
+    <a href="https://wa.me/5583994108612" target="_blank">
+    <button>Entre em contato<img src="img/whatsapp.png" alt="botão whatsapp"></button>
+    </a>
     <!-- FORMULARIO PRINCIPAL -->
-    <form class="form-1" action="/action_page.php">
+    <form class="form-1" action="/action_page.php" style="display: none;">
 
       <label for="fname">Nome</label>
       <input type="text" id="fname" name="firstname" placeholder="Seu nome...">
