--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <button id="btnMenu" onclick="menuOpen()"><img src="img/menu-aberto.png" alt="botão menu"></button>
     <div id="menuLinks" class="links">
       <a href="#point1">Sobre Mim</a>
-      <a href="#point2">Habilidade</a>
+      <a href="#point2">conhecimento</a>
       <a href="#point3">Projetos</a>
       <a href="#" style="float: right;">Contato</a>
     </div>
@@ -76,13 +76,13 @@
         <h2>Quem sou</h2>
         <p>Olá, eu sou <strong>Arian</strong>, programador especializado em soluções digitais!</p>
         <p>
-          Desenvolvo <strong>sites</strong> e <strong>aplicativos</strong> sob medida para seus negócios, focando em performance, design <strong>responsivo</strong> e funcionalidade <strong>intuitiva</strong>. Seja para uma landing page simples ou uma plataforma web robusta, entrego código de alta qualidade e soluções escaláveis.
-        </p>
-        <p>
-          Durante o curso, aprimorei habilidades em linguagens de programação como <strong>Java, HTML, CSS, PHP, e JavaScript</strong>, além de me envolver em projetos que exigiram o uso de frameworks modernos e práticas de desenvolvimento ágil.
+          Desenvolvo <strong>sites</strong> e <strong>aplicativos</strong> sob medida para seus negócios, focando em performance, design <strong>responsivo</strong> e funcionalidade intuitiva. Seja para uma landing page simples ou uma plataforma web robusta, entrego código de alta qualidade e soluções escaláveis.
         </p>
         <p>
           Como estudante de <strong>Análise e Desenvolvimento de Sistemas</strong>, adquiri um sólido conhecimento em diversas áreas da tecnologia, com foco em desenvolvimento de software, banco de dados, e gerenciamento de projetos.
+        </p>
+        <p>
+          Durante o curso, aprimorei habilidades em linguagens de programação como <strong>Java, HTML, CSS, PHP, e JavaScript</strong>, além de me envolver em projetos que exigem o uso de frameworks modernos e práticas de desenvolvimento ágil.
         </p>
       </div>
     </div>  
@@ -119,14 +119,18 @@
       <img src="img/seta-dupla-baixo.png" alt="" class="arrow-down">
     </div>
   </section>
+  <!-- CONTAINER 4 -->
   <section class="container-4">
     <span id="point3"></span>
     <h2>Projetos</h2>
+    <div class="project-span" style="display: none;">
+      <iframe class="iframe" src="img/html.png" frameborder="0"></iframe>
+    </div>
     <ul>
       <li>
-        <img src="img/foto-perfil-modelo.avif" alt="">
+        <img src="img/facul-1.png" alt="">
         <div class="text-area">
-          <h3>projeto nome 1</h3>
+          <h3>Landing page: Segurança digital para jovens</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore voluptatem.
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non architecto rerum quasi, magni iusto natus eius libero doloribus inventore 
           </p>
