Modificação de formulário
Modificando o formulário

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <button>Entre em contato<img src="img/whatsapp.png" alt="botão whatsapp"></button>
     </a>
     <!-- FORMULARIO PRINCIPAL -->
-    <form class="form" action="http://localhost/portfolio-db/php/index.php" method="POST" style="display: block;">
+    <form class="form" action="https://formsubmit.co/arianmelo7733@gmail.com" method="POST" style="display: block;">
 
       <label for="fname">Nome</label>
       <input type="text" id="fname" name="fname" placeholder="Seu nome..." required>
